--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+ {
   "name": "app",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "echarts": "^5.0.2",
     "less-loader": "^5.0.0",
+    "socket.io-client": "^4.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
