--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "no-mixed-spaces-and-tabs": 0
+      "no-mixed-spaces-and-tabs": 0,
+      "no-unused-vars" : "off"
     }
   },
   "browserslist": [
