--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
-    "mockjs": "^1.1.0",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.6.3",
     "sequelize": "^6.6.5"
+  },
+  "devDependencies": {
+    "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.10",
+    "mockjs": "^1.1.0"
   }
 }
