--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "app",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.7.7",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "echarts": "^5.0.2",
@@ -19,8 +20,8 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-eslint": "^3.1.1",
+    "@vue/cli-service": "^3.12.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
@@ -40,7 +41,8 @@
     },
     "rules": {
       "no-mixed-spaces-and-tabs": 0,
-      "no-unused-vars" : "off"
+      "no-unused-vars": "off",
+      "vue/no-unused-components" : "off"
     }
   },
   "browserslist": [
