--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.6.3",
     "sequelize": "^6.6.5"
@@ -21,6 +22,7 @@
   "devDependencies": {
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.10",
-    "mockjs": "^1.1.0"
+    "mockjs": "^1.1.0",
+    "nodemon": "^2.0.12"
   }
 }
