--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "^3.1.1",
-    "@vue/cli-service": "^3.12.1",
+    "@vue/cli-service": "^4.5.13",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "less": "^3.13.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -42,7 +43,7 @@
     "rules": {
       "no-mixed-spaces-and-tabs": 0,
       "no-unused-vars": "off",
-      "vue/no-unused-components" : "off"
+      "vue/no-unused-components": "off"
     }
   },
   "browserslist": [
